一旦解析力学はストップ

--- a/physics/analytical-mechanics.tex
+++ b/physics/analytical-mechanics.tex
@@ -77,7 +77,7 @@
             この性質がラグランジアンの適用範囲を広げることになる。
 
         \section{ラグランジュの未定乗数法}
-            いつか書く
+            気が向いたら書く
 
     \chapter{対称性と保存則}
         \section{時間並進の対称性}
@@ -268,6 +268,20 @@
 
     \chapter{正準変換}
         \section{ルジャンドル変換}
+            ルジャンドル変換というのは、変数の変換をするような操作である。
+            ただ無制限にということではなく、変換先の変数は偏微分を使用してできるものである。
+            ある関数$f(x, y)$を考える。
+            ここで、
+            \begin{equation}
+                u = \frac{\partial f}{\partial x} \quad v = \frac{\partial f}{\partial y}
+            \end{equation}
+            という$u$、$v$を用意すれば、系の構造は不変のままで変数を変換することができる。
+            \begin{align}
+                g(u, y) &= f(x, y) - ux \\
+                h(u, v) &= f(x, y) - ux - vy
+            \end{align}
+            例えばこれをラグランジアン$(q, p, t)$に対して行うことで、ハミルトニアン$(q, p, t)$に変換することができる。
+
         \section{正準変換}
             これまで扱ってきた変数$(q, p)$は\textbf{正準変数}と呼ばれている。
             これを元に、以下のような形式で新しい正準変数$(Q, P)$を作成することを\textbf{正準変換}という。
