--- a/physics/quantum-mechanics.tex
+++ b/physics/quantum-mechanics.tex
@@ -11,7 +11,110 @@
     \tableofcontents
 
     \chapter{オーバービュー}
-        \section{量子力学とは}
-            ここは後々書くヲ
 
+        \section{量子とは}
+            量子とは\textbf{波動性と粒子性の２つの性質をあわせ持つようなもの}のことである。
+            具体的には、電子などのミクロな粒子のことである。
+            この二面性を持つことから、どうしてもニュートン力学のような古典力学では対応しきらず、新しい力学が必要になった。
+
+        \section{量子力学とは}
+            量子の世界は非常に不思議な世界である。
+            この不思議さは、よく二重スリットを用いた思考実験でよく語られる。
+            ざっくり言うと、二重スリットの側で電子が通る様子を観察していると、明らかに粒が通っている。
+            ただ、スクリーンには粒ではなく波が作るような干渉縞ができる。
+
+            
+
+
+    \chapter{波動関数と物理量}
+
+        \section{波動関数}
+            波動力学（シュレーディンガー形式）における波動関数を以下のように定義する。\par
+            粒子の位置を測定した際に、微小体積$d \boldsymbol{r}$内に粒子が見出される確率は、
+            \begin{equation}
+                |\psi(\boldsymbol{r}, t)|^2 d\boldsymbol{r}
+            \end{equation}
+            に比例する。
+            これは波動的な要請が非常に強い定義である。
+            故に、実態が粒子であろうがなんであろうが、観測者である我々にとっては波動の性質の方が顕著に観測できるのだから、波動としての性質に重きを置いておこうという主張である。
+            ちなみに、波動を表す関数の絶対値の2乗$|\psi(\boldsymbol{r}, t)|^2$が強度（=確率）を表現するというのは幾何光学の考え方と同様である。\par
+            波動関数の2乗が確率を表現するということから、確率の合計が1になるように整えたい。
+            この操作を\textbf{規格化}といい、
+            \begin{equation}
+                \int |\psi(\boldsymbol{r}, t)|^2 d\boldsymbol{r} = 1
+            \end{equation}
+            という条件を課すことで、確率の総和が1になる。
+            この計算では、
+            \begin{equation}
+                \int |\psi|^2 d\boldsymbol{r} = \int \psi^* \psi d\boldsymbol{r}
+            \end{equation}
+            というように、波動関数が複素数であることを考慮して、複素共役を取る必要がある。
+            この演算を\textbf{内積}とし、
+            \begin{equation}
+                (\psi, \psi) = \psi^* \psi
+            \end{equation}
+            というように表現する。
+            名前だけ出しておくが、このように表現されるのは量子力学が\textbf{ヒルベルト空間}を舞台にした学問であるからであるといえる。
+
+        \section{不確定性原理}
+            干渉縞のような波動としての性質は、\textbf{大数の法則}に基づいて形成される。
+            つまり、粒子ごとにスポットを当てて観測してみると、薄い干渉縞が現れるわけもなく、ただ一つの粒子がスクリーンに引っ付くだけである。
+            波動関数の主張として、傾向はあれど確率的に動きが決まる。
+            つまり、量子の性質として本質的に不確定な要素を含んでいる。
+            ここでは、一次元での結果のみを記述しておくと、
+            \begin{equation}
+                \Delta x \Delta p \geq \frac{\hbar}{2}
+            \end{equation}
+            と表され、古典力学ではありえないような不確定性が生じることがわかる。
+
+        \section{シュレーディンガー方程式}
+            波動関数$\psi(\boldsymbol{r}, t)$は以下のようなシュレーディンガー方程式の解である。
+            \begin{equation}
+                i \hbar \frac{\partial \psi(\boldsymbol{r}, t)}{\partial t} = \left( -\frac{\hbar^2}{2m} \nabla^2 + V(\boldsymbol{r}, t)\right) \psi(\boldsymbol{r}, t)
+            \end{equation}
+            これの右辺について、
+            \begin{equation}
+                \hat{H} = -\frac{\hbar^2}{2m} \nabla^2 + V(\boldsymbol{r}, t)
+            \end{equation}
+            と定義したとき、この$\hat{H}$を\textbf{ハミルトニアン}という。
+            この命名は、解析力学におけるハミルトニアンに由来しており、これはエネルギーの次元を持っている。
+            ここで、古典力学との対応を考えたいのだが、ハミルトニアンを古典的に表現すると、エネルギーの次元を持つことから、
+            \begin{equation}
+                H = \frac{p^2}{2m} + V(x)
+            \end{equation}
+            と表現できる。この古典的な表式とハミルトニアン$\hat{H}$を比べると、運動量の対応関係として、
+            \begin{equation}
+                p \rightarrow -i \hbar \nabla
+            \end{equation}
+            であることがわかる。
+            これを\textbf{運動量演算子}と呼び、演算子と値を区別するために、$\hat{p}$のように表現することにする。
+
+        \section{固有値と期待値}
+            物理量と固有値
+            固有値＝期待値
+            エーレンフェストの定理
+
+        \section{定常状態}
+            定常状態のシュレーディンガー方程式
+
+        \section{群速度と位相速度}
+            分散
+
+    \chapter{一粒子系}
+        この章では、簡易的なモデルを通じて、量子の性質について考えていくことにする。
+        ただ、計算過程を書いていく気力はないので、計算結果のみを記述していくことにする。
+        \section{3次元自由粒子}
+            基底状態や励起状態
+            ゼロ点運動やゼロ点エネルギー
+            縮退やエネルギー準位
+
+
+    \chapter{行列と状態ベクトル}
+    \chapter{摂動論}
+    \chapter{スピン}
+    \chapter{多粒子系}
+    \chapter{数表示}
+    \chapter{第二量子化}
+    \chapter{相対論的量子力学}
+        
 \end{document}
