--- a/physics/quantum-mechanics.tex
+++ b/physics/quantum-mechanics.tex
@@ -210,11 +210,30 @@
             固有値はその物理系の情報を持っているものであり、変換に際してそれが変更されてしまってはいけないからである。
 
         \section{交換関係}
+            
 
         \section{ハイゼンベルグの運動方程式}
 
     \chapter{摂動論}
+        
+            
     \chapter{スピン}
+        \section{スピン角運動量}
+            電子はスピンによる（と考えると直感的かつ古典的な）角運動量とそれに伴う磁気モーメントを持っている。
+            \textbf{スピン角運動量}を$s$と表記し、天下り的に$s=\pm \frac{1}{2}$であることとして、角運動量との対応関係を考えることで、固有状態を$\xi$とすると、
+            \begin{equation}
+                s^2 \xi = s(s+1)\hbar^2 \xi = \frac{3}{4}\hbar^2 \xi
+            \end{equation}
+
+        \section{スピン軌道相互作用}
+
+
+        \section{角運動量の合成}
+
+
+        \section{ゼーマン効果}
+            
+
     \chapter{多粒子系}
     \chapter{数表示}
     \chapter{第二量子化}
