--- a/physics/statistical-mechanics.tex
+++ b/physics/statistical-mechanics.tex
@@ -198,8 +198,34 @@
 
     \chapter{量子理想気体}
         \section{多粒子系の量子論}
+            多粒子系では、\textbf{同種粒子は区別できない}という原理に基づいている。
+            つまり、粒子の状態は起こり得る状態の重ね合わせで表されるということである。
+            この考え方自体は、統計力学で確率モデルによる記述をすることからも分かることである。\par
+            そこで、2粒子系について考える。
+            原理的に区別することができないため、
+            \begin{align}
+                \psi(\vb{r_1}, \vb{r_2}) &= \alpha \psi(\vb{r_2}, \vb{r_1}) \\
+                \psi(\vb{r_2}, \vb{r_1}) &= \alpha \psi(\vb{r_1}, \vb{r_2})
+            \end{align}
+            と表される。
+            これより、
+            \begin{equation}
+                \psi(\vb{r_1}, \vb{r_2}) = \alpha^2 \psi(\vb{r_1}, \vb{r_2})
+            \end{equation}
+            となる。
+            この式から、$\alpha$は2つの値を持つことがわかり、それぞれで別の性質を持つ。\par
+            まず、$\alpha=1$となるような粒子のことを\textbf{ボーズ粒子}や\textbf{ボゾン}と呼ぶ。
+            2つの座標を入れ替えても変化しないということから、\textbf{同じ内部情報}を持つことができると言える。\par
+            次に、$\alpha=-1$となるような粒子のことを\textbf{フェルミ粒子}や\textbf{フェルミオン}と呼ぶ。
+            フェルミオンはその反対称性から、スレーター行列で表現される。（パリティのおかげ）
         \section{状態の数}
+
+
         \section{平衡状態の記述（グランドカノニカル分布）}
+            ボーズ分布関数とフェルミ分布関数は、グランドカノニカル分布での議論から粒子数の期待値を導出することで自然と出てくる。
+            大分配関数を求める際の議論の中で、ボゾンとフェルミオンを区別して考える。
+
+
         \section{理想フェルミ気体}
         \section{理想ボース気体}
         
