--- a/graduation-studies/solid-state-physics.tex
+++ b/graduation-studies/solid-state-physics.tex
@@ -36,6 +36,7 @@
             結晶（格子）の面を表現するには\textbf{ミラー指数}と呼ばれる量を使用し、$(hkl)$というように表記する。
             ここでは、基本並進ベクトル$\boldsymbol{a_i}$を使って、その軸上での点$0$から$1$の範囲で指定し、その逆数をそれぞれ取ったものがそれらの点を繋いでできる面がミラー指数で表される結晶面となる。
             文章だけで説明することは難しいので、ここではこれぐらいの記述に留めておく。
+            ちなみにミラー指数は、逆格子空間での記述に対応させており、表記として$(hkl) = (m_1m_2m_3)$と、逆格子ベクトルの係数を順に並べるように定義されている。
 
         \section{逆格子ベクトル}
             実空間での解析よりも、\textbf{逆格子空間}（波数空間）と呼ばれる、実空間と逆の次元を持つような空間での解析の方が見通しが良い。
@@ -81,18 +82,39 @@
             となるときである。
             ちなみに、この$- \Delta k$は\textbf{散乱ベクトル}と呼ばれる量である。
             この散乱が\textbf{弾性散乱}である場合、式変形をしていくことで、
-            \begin{equation}
+            \begin{equation} \label{eq:25b}
                 2 \boldsymbol{k} \cdot \boldsymbol{G} = G^2
             \end{equation}
             という表式が現れる。
             ここまでの議論は、強め合う条件に関するもので、最後の表式は\textbf{ブラッグの条件}の別の表し方であると言える。
 
         \section{ブリルアンゾーン}
-            実空間のウィグナーについても、拡張ゾーン形式などについても、\par
             実空間の単位格子に\textbf{ウィグナー・サイツ・セル}と呼ばれるものがある。
-            これは各格子点との
+            これは各格子点との中間面に囲まれた領域のことで、格子内に原子をただ1つだけ含む最小の格子（単位格子）である。\par
+            逆格子空間におけるウィグナー・サイツ・セルに当たるものが\textbf{ブリルアンゾーン}である。
+            (\ref{eq:25b})式を利用して、両辺を$4$で割ることで、
+            \begin{equation}
+                \boldsymbol{k} \cdot \left(\frac{1}{2} \boldsymbol{G}\right) = \left(\frac{1}{2} G\right)^2
+            \end{equation}
+            という表式が成り立ち、これがブリルアンゾーンを表す。
+            このブリルアンゾーンは、中間面によって囲まれる空間の取り方に任意性があり、体積が小さい順に\textbf{第一ブリルアンゾーン}、\textbf{第二ブリルアンゾーン}、、と呼ばれる。
+            もちろんのこと、境界は(\ref{eq:25b})式を満たす、つまりブラッグの条件を満たすので回折現象により強め合う。
 
         \section{構造因子}
+            散乱された波の振幅\textbf{（散乱振幅$F$）}は、その位置の電子密度$n(\boldsymbol{r})$に依存し、
+            \begin{equation}
+                F = N \int dV n(\boldsymbol{r}) \exp(-i\boldsymbol{G} \cdot \boldsymbol{r}) = NS_G
+            \end{equation}
+            と表される。
+            ちなみに、振幅の2乗が強度に当たる。
+            これより、電子間の相互作用などを踏まえて、導出過程は省略するが、
+            \begin{equation}
+                S_G = \sum_{j}f_j \exp(-i\boldsymbol{G} \cdot \boldsymbol{r_j})
+            \end{equation}
+            となり、この$S_G$を\textbf{構造因子}、$f_j$を\textbf{原子構造因子}と呼ぶ。
+            $f_j$については、原子（の状態）ごとに決まった値を持つものである。
+            この$S_G$は、結晶構造を如実に表すものであり、結晶にどこに光を当てるとどれほど散乱するのかなどをすることができ、例えば散乱強度が$0$になるようなパラメータでは弱め合っているということが分かる。
+
         
         
 
