--- a/graduation-studies/solid-state-physics.tex
+++ b/graduation-studies/solid-state-physics.tex
@@ -119,15 +119,34 @@
         
 
     \chapter{結合}
-        \section{}
-        \section{}
-        \section{}
-        \section{}
-        \section{}
-        \section{}
-        
-        
+        \section{結合とは}
+            原子はなぜ結合するのか。
+            その理由はシンプルで、結合した方が安定するからである。
+            それを定量的に見ていきたいのだが、原子が完全に自由な時と、結合して結晶になっている時のエネルギー差を\textbf{結合エネルギー}と呼ぶ。
+            この結合エネルギーが大きいほど、結合しやすいと言える。\par
+            2原子間の相互作用を表すポテンシャルエネルギー$V(R)$を使って、
+            \begin{equation}
+                F(R) = - \frac{dV(R)}{dR}
+            \end{equation}
+            は\textbf{原子間力}を与える。
+            このポテンシャルエネルギー$V(R)$は、ある$R_0$で極小値を取り、その$R_0$が安定の位置となり、そのときの原子間力は$0$になる。\par
 
+        \section{分子結合}
+            2つの水素原子の結合について考える。
+            それぞれの原子の波動関数を$\varphi_1$, $\varphi_2$と表現することにすると、分子の波動関数は、
+            \begin{equation}
+                    \phi = C_1 \varphi_1 + C_2 \varphi_2
+            \end{equation}
+            と一次結合で表される。
+            この波動関数のエネルギー準位を考えると、元のエネルギー準位よりも低い準位（安定的で結合に寄与する価電子帯）と高い準位（非安定的で電気伝導に寄与する伝導帯）の2つに分裂する。
+            前者を\textbf{結合性軌道}、後者を\textbf{反結合性軌道}という。
+
+        \section{イオン結合}
+        \section{共有結合}
+        \section{金属結合}
+        \section{ファン・デル・ワールス結合}
+        \section{水素結合}
+        
     \chapter{フォノン}
         p.79~
         \section{}
